@@ -533,7 +533,7 @@ function formatMenubar($mailbox, $passed_id, $passed_ent_id, $message, $mbx_resp
 
     $msgs_url = $base_uri . 'src/';
     if (isset($where) && isset($what)) {
-        $msgs_url .= 'search.php?where=' . urlencode($where) .
+        $msgs_url .= 'search.php?smtoken=' . sm_generate_security_token() . '&amp;where=' . urlencode($where) .
                      '&amp;what=' . urlencode($what) . '&amp;mailbox=' . $urlMailbox;
         $msgs_str  = _("Search Results");
     } else {
